# pdf_automation

./: README.md  example.py  pyproject.toml  sample_output.csv
