[tool.poetry]
name = "proposal"
version = "0.1.0"
description = ""
authors = ["noahdemoes <noahdemoes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.9.0"
pydantic = "^1.10.7"
pandas = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
